--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="Page1 section" src="" alt="">
 
                 <nav class="navbar">
-                    <p><b>Portfolio</b></p>
+                    <p>Portfolio</p>
                     <div class="navbarElement">
                         <p>PRÉSENTATION</p>
                         <p>PROJETS</p>
@@ -23,13 +23,12 @@
                 </nav>
                 <div id="progress"></div>
                 <div class="containerTitle">
-                    <div>
-                        <div class="title">
-                            <H1>ANOUK THOMAS</H1>
-                        </div>
-                        <div class="subtitle">
-                            <H3>CHARGÉ DE COMMUNICATION (JUNIOR)</H3>
-                        </div>
+
+                    <div class="title">
+                        <H1>ANOUK THOMAS</H1>
+                    </div>
+                    <div class="subtitle">
+                        <p>CHARGEE DE COMMUNICATION (JUNIOR)</p>
                     </div>
                 </div>
                 <div class="waveContainer">
@@ -40,7 +39,7 @@
                 </div>
             </div>
         </header>
-        <div id="cursorImage"></div>
+
         <H2 class="titleProjet">Projets</H2>
         <div class="Page2 section2" id="projects">
             <!-- Remplir les projets via JavaScript -->
