pointer event good manque la taille des image

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+<div id="allPage">
     <div class="section-container">
         <header>
             <div class="Page1 section" src="" alt="">
@@ -38,6 +39,7 @@
                     </svg>
                 </div>
             </div>
+
         </header>
 
         <H2 class="titleProjet">Projets</H2>
@@ -55,6 +57,8 @@
 
         </footer>
     </div>
+</div>
+<div id="cursorImage"></div>
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
