ajout de la page project

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <p>Portfolio</p>
                     <div class="navbarElement">
                         <p>PRÉSENTATION</p>
-                        <p>PROJETS</p>
+                        <p><a href="project.html">PROJETS</a></p>
                         <p>CONTACT</p>
                     </div>
                     <div id="clock">--:--:--</div>
