--- a/project.html
+++ b/project.html
@@ -10,13 +10,23 @@
 </head>
 <body>
 <nav class="navbar">
-    <p>Portfolio</p>
+    <a href="index.html" class="portfolio">Portfolio</a>
     <div class="navbarElement">
         <p>PRÉSENTATION</p>
         <p><a href="project.html">PROJETS</a></p>
         <p>CONTACT</p>
     </div>
-    <div id="clock">--:--:--</div>
+    <div class="navRight">
+        <div id="clock">
+            --:--:--
+        </div>
+        <div class="toggle-switch">
+            <label class="switch-label">
+                <input type="checkbox" class="checkbox">
+                <span class="slider"></span>
+            </label>
+        </div>
+    </div>
 </nav>
 <div id="projetContainer">
     <h1>Mes Projets</h1>
