ajout page presentation

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <nav class="navbar">
                     <a href="index.html" class="portfolio">Portfolio</a>
                     <div class="navbarElement">
-                        <p>PRÉSENTATION</p>
+                        <a href="presentation.html">PRÉSENTATION</a>
                         <p><a href="project.html">PROJETS</a></p>
                         <p>CONTACT</p>
                     </div>
