--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                     <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
                         <path fill="#FAA1D4" d="M0,30 C360,90 1080,-30 1440,30 L1440,100 L0,100 Z"></path>
                     </svg>
+
+                    <!-- Vague inversée (miroir vertical) -->
+                    <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
+                        <path fill="#FAA1D4" d="M0,70 C360,10 1080,130 1440,70 L1440,0 L0,0 Z"></path>
+                    </svg>
                 </div>
             </div>
 
