commencement des projects

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <nav class="navbar">
                     <a href="index.html" class="portfolio">Portfolio</a>
                     <div class="navbarElement">
-                        <a href="presentation.html">PRÉSENTATION</a>
+                        <p><a href="presentation.html">PRÉSENTATION</a></p>
                         <p><a href="project.html">PROJETS</a></p>
                         <p>CONTACT</p>
                     </div>
@@ -48,7 +48,6 @@
                         <path fill="#FAA1D4" d="M0,30 C360,90 1080,-30 1440,30 L1440,100 L0,100 Z"></path>
                     </svg>
 
-                    <!-- Vague inversée (miroir vertical) -->
                     <svg viewBox="0 0 1440 100" xmlns="http://www.w3.org/2000/svg">
                         <path fill="#FAA1D4" d="M0,70 C360,10 1080,130 1440,70 L1440,0 L0,0 Z"></path>
                     </svg>
