--- a/presentation.html
+++ b/presentation.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <a href="index.html" class="portfolio">Portfolio</a>
         <div class="navbarElement">
-            <a href="presentation.html">PRÉSENTATION</a>
+            <p><a href="presentation.html">PRÉSENTATION</a></p>
             <p><a href="project.html">PROJETS</a></p>
             <p>CONTACT</p>
         </div>
@@ -26,7 +26,7 @@
             </div>
         </div>
     </nav>
-    <div class="presentationContainer">
+    <div class="presentationContainer" >
         <div class="presentationText">
             <h1>Présentation</h1>
             <p>Bienvenue sur ma page de présentation. Ici, vous trouverez des informations sur mon parcours, mes
