--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="Page1 section" src="" alt="">
 
                 <nav class="navbar">
-                    <a href="index.html" class="portfolio">Portfolio</a>
+                    <a href="index.html" class="portfolio">PORTFOLIO</a>
                     <div class="navbarElement">
                         <p><a href="presentation.html">PRÉSENTATION</a></p>
                         <p><a href="project.html">PROJETS</a></p>
