--- a/project.html
+++ b/project.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="index.html" class="portfolio">Portfolio</a>
+    <a href="index.html" class="portfolio">PORTFOLIO</a>
     <div class="navbarElement">
         <a href="presentation.html">PRÉSENTATION</a>
         <p><a href="project.html">PROJETS</a></p>
