--- a/projects/basket.html
+++ b/projects/basket.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="../index.html" class="portfolio">Portfolio</a>
+    <a href="../index.html" class="portfolio">PORTFOLIO</a>
     <div class="navbarElement">
         <p><a href="../presentation.html">PRÉSENTATION</a></p>
         <p><a href="../project.html">PROJETS</a></p>
@@ -32,7 +32,7 @@
             <h1>Union Basket Des Aspres</h1>
         </div>
         <div class="subtitleProject">
-            <p class="subtitleProject">STAGE</p>
+            <p class="subtitleProject">ENGAGEMENT ÉTUDIANT </p>
         </div>
     </div>
     <div class="imageprincipal">
