--- a/presentation.html
+++ b/presentation.html
@@ -8,7 +8,7 @@
 <body>
 <div class="PagePres">
     <nav class="navbar">
-        <a href="index.html" class="portfolio">Portfolio</a>
+        <a href="index.html" class="portfolio">PORTFOLIO</a>
         <div class="navbarElement">
             <p><a href="presentation.html">PRÉSENTATION</a></p>
             <p><a href="project.html">PROJETS</a></p>
@@ -31,6 +31,26 @@
             <h1>Présentation</h1>
             <p>Bienvenue sur ma page de présentation. Ici, vous trouverez des informations sur mon parcours, mes
                 compétences et mes expériences professionnelles.</p>
+            <h2 class="competencetitle">Mes Compétences</h2>
+            <div class="carousel-container">
+                <button class="carousel-btn left" id="prevBtn">‹</button>
+                <div class="carousel-track-container">
+                    <ul class="carousel-track">
+                        <li class="carousel-slide" id="canva"><img src="./img/caroussel/canva.png" alt="Logo 1"></li>
+                        <li class="carousel-slide" id="capcut"><img src="./img/caroussel/Capcut.webp" alt="Logo 2"></li>
+                        <li class="carousel-slide" id="photoshop"><img src="./img/caroussel/photoshop.PNG" alt="Logo 3"></li>
+                        <li class="carousel-slide" id="wordpress"><img src="./img/caroussel/wordpress.png" alt="Logo 4"></li>
+                        <li class="carousel-slide" id="Indesign"><img src="./img/caroussel/Indesign.PNG" alt="Logo 5"></li>
+                        <li class="carousel-slide" id="trello"><img src="./img/caroussel/trello.PNG" alt="Logo 6"></li>
+                        <li class="carousel-slide" id="word"><img src="./img/caroussel/word.PNG" alt="Logo 7"></li>
+                    </ul>
+                </div>
+                <p id="nomLogo"></p>
+                <button class="carousel-btn right" id="nextBtn">›</button>
+            </div>
+
+
+
         </div>
         <div>
             <img src="./img/ANOUK_THOMAS .png" class="passport">
