fin de petite modif voir trello

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <H1>ANOUK THOMAS</H1>
                     </div>
                     <div class="subtitle">
-                        <p id="subtitle">CHARGEE DE COMMUNICATION (JUNIOR)</p>
+                        <p id="subtitle">CHARGÉE DE COMMUNICATION (JUNIOR)</p>
                     </div>
                 </div>
                 <div class="waveContainer">
@@ -56,6 +56,12 @@
 
         </header>
             <H2 class="titleProjet">Projets</H2>
+        <button class="btn" onclick="window.location.href='project.html'">
+            Tous mes projets
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" height="15px" width="15px" class="icon">
+                <path stroke-linejoin="round" stroke-linecap="round" stroke-miterlimit="10" stroke-width="1.5" stroke="#ffffff" d="M8.91016 19.9201L15.4302 13.4001C16.2002 12.6301 16.2002 11.3701 15.4302 10.6001L8.91016 4.08008"></path>
+            </svg>
+        </button>
         <div id="projetContainer">
             <div class="Page2 section2" id="projects">
                 <!-- Remplir les projets via JavaScript -->
