--- a/presentation.html
+++ b/presentation.html
@@ -36,13 +36,21 @@
                 <button class="carousel-btn left" id="prevBtn">‹</button>
                 <div class="carousel-track-container">
                     <ul class="carousel-track">
-                        <li class="carousel-slide" id="canva"><img src="./img/caroussel/canva.png" alt="Logo 1"></li>
-                        <li class="carousel-slide" id="capcut"><img src="./img/caroussel/Capcut.webp" alt="Logo 2"></li>
-                        <li class="carousel-slide" id="photoshop"><img src="./img/caroussel/photoshop.PNG" alt="Logo 3"></li>
-                        <li class="carousel-slide" id="wordpress"><img src="./img/caroussel/wordpress.png" alt="Logo 4"></li>
+                        <li class="carousel-slide" id="Photoshop"><img src="./img/caroussel/photoshop.PNG" alt="Logo 3"></li>
                         <li class="carousel-slide" id="Indesign"><img src="./img/caroussel/Indesign.PNG" alt="Logo 5"></li>
-                        <li class="carousel-slide" id="trello"><img src="./img/caroussel/trello.PNG" alt="Logo 6"></li>
-                        <li class="carousel-slide" id="word"><img src="./img/caroussel/word.PNG" alt="Logo 7"></li>
+                        <li class="carousel-slide" id="Illustrator"><img src="./img/caroussel/Illustrator.PNG" alt="Logo 12"></li>
+                        <li class="carousel-slide" id="Word"><img src="./img/caroussel/word.PNG" alt="Logo 7"></li>
+                        <li class="carousel-slide" id="Excel"><img src="./img/caroussel/Exel.PNG" alt="Logo 13"></li>
+                        <li class="carousel-slide" id="Wordpress"><img src="./img/caroussel/wordpress.png" alt="Logo 4"></li>
+                        <li class="carousel-slide" id="Drive"><img src="./img/caroussel/Drive.PNG" alt="Logo 14"></li>
+                        <li class="carousel-slide" id="Trello"><img src="./img/caroussel/trello.PNG" alt="Logo 6"></li>
+                        <li class="carousel-slide" id="Capcut"><img src="./img/caroussel/Capcut.webp" alt="Logo 2"></li>
+                        <li class="carousel-slide" id="Canva"><img src="./img/caroussel/canva.png" alt="Logo 1"></li>
+                        <li class="carousel-slide" id="Pinterest"><img src="./img/caroussel/Pinterst.PNG" alt="Logo 15"></li>
+                        <li class="carousel-slide" id="Linkedin"><img src="./img/caroussel/Linkedin.PNG" alt="Logo 9"></li>
+                        <li class="carousel-slide" id="Tiktok"><img src="./img/caroussel/Tiktok.PNG" alt="Logo 10"></li>
+                        <li class="carousel-slide" id="Instagram"><img src="./img/caroussel/Instagram.PNG" alt="Logo 11"></li>
+                        <li class="carousel-slide" id="Facebook"><img src="./img/caroussel/Facebook.PNG" alt="Logo 8"></li>
                     </ul>
                 </div>
                 <p id="nomLogo"></p>
