--- a/project.html
+++ b/project.html
@@ -29,7 +29,7 @@
     </div>
 </nav>
 <div id="projetContainer">
-    <h1>Mes Projets</h1>
+    <h1 class="titleProjectList">Mes Projets</h1>
     <div id="projectPage">
         <!-- Les projets seront insérés ici par JavaScript -->
     </div>
