footer bar a revoir car pas du tout bon

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="Page1 section" src="" alt="">
 
                 <nav class="navbar">
-                    <a href="index.html" class="portfolio">PORTFOLIO</a>
+                    <a href="index.html"><div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
                     <div class="navbarElement">
                         <p><a href="presentation.html">PRÉSENTATION</a></p>
                         <p><a href="project.html">PROJETS</a></p>
@@ -70,10 +70,10 @@
         </div>
         <footer>
             <nav class="footerNavbar">
-                <div class="footerElement">
-                    <p>Contact</p>
-                    <p>Mentions légales</p>
-                    <p>Réseaux sociaux</p>
+                <div class="footerElement" id="footerElement">
+                    <img src="img/footer/linkedin-blanc.png" class="linkedinFooter" alt="Logo Linkedin">
+                    <img src="img/footer/instagram-blanc.png" class="instagramFooter" alt="Logo Instagram">
+                    <img src="img/footer/mail-blanc.png" class="mailFooter" alt="Logo Mail">
                 </div>
             </nav>
 
