--- a/projects/basket.html
+++ b/projects/basket.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <nav class="navbar">
-    <a href="../index.html" class="portfolio">PORTFOLIO</a>
+    <a href="../index.html"><div class="Logo"><img src="../img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
     <div class="navbarElement">
         <p><a href="../presentation.html">PRÉSENTATION</a></p>
         <p><a href="../project.html">PROJETS</a></p>
