--- a/presentation.html
+++ b/presentation.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Porfolio -présentation</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="./img/logo.ico">
+    <link rel="apple-touch-icon" href="./img/logo.png">
 </head>
 <body>
 <div class="PagePres">
