--- a/projects/basket.html
+++ b/projects/basket.html
@@ -5,6 +5,9 @@
     <title>Portfolio - Union Basket Des Aspres</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../project.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="./img/logo.ico">
+    <link rel="apple-touch-icon" href="./img/logo.png">
 </head>
 <body>
 <nav class="navbar">
