debut du projet grizzlys + reel dans le tel

--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -63,21 +63,50 @@
         <p class="infoMiniText">Les Grizzlys Catalans sont un club de football américain fondé en 2012, aujourd’hui basé à Perpignan. Rapidement montés en puissance, ils ont remporté le championnat de France de Division 3 en 2018 avant d’accéder à la Division Élite en 2020, le plus haut niveau national. Le club, présidé par Laurent Aliu, évolue au Parc des Sports et porte les couleurs noir et beige. Au-delà de la compétition, les Grizzlys misent sur la formation avec une Académie Sport-Études pour initier les plus jeunes.</p>
     </div>
 </div>
-<div class="colorsProjectGrizzlys">
-    <div class="fleche">
-        <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
-        <p class="TextLogo">Le logo</p>
-    </div>
-    <div class="logoGrizzlys">
-        <img class="imgLogoGrizzllys" src="../img/grizzlys/logo.png">
-    </div>
-    <div class="colorOrangeGrise">
-    </div>
-    <div class="colorBlanc">
-    </div>
-    <div class="colorNoir">
-    </div>
+<div class="projectContentGrizzlys">
+    <div class="colorsProjectGrizzlys">
+        <div class="fleche">
+            <img class="imgFleche" src="../img/grizzlys/petiteFleche.webp">
+            <p class="TextLogo">Le logo</p>
+        </div>
+        <div class="logoGrizzlys">
+            <img class="imgLogoGrizzllys" src="../img/grizzlys/logo.png">
+        </div>
+        <div class="colorOrangeGrise">
+        </div>
+        <div class="colorBlanc">
+        </div>
+        <div class="colorNoir">
+        </div>
 
+    </div>
+</div>
+<div class="projectGalleryGrizzlys">
+    <div class="iphone">
+        <div class="textUnderPhone">
+            <div>
+                <img class="tel" src="../img/grizzlys/tel.webp">
+                <video id="video1" class="video" controls loop poster="image.jpg">
+                    <source src="../img/grizzlys/réel1.mov" type="video/mp4">
+                </video>
+            </div>
+            <p>Réel Instagram sur un entraînement découverte des plus jeunes sur le compte @grizzlys_association.</p>
+        </div>
+    </div>
+    <div class="iphone">
+        <div class="textUnderPhone">
+            <img class="tel" src="../img/grizzlys/tel.webp">
+            <video id="video2" class="video" controls loop poster="image.jpg">
+                <source src="../img/grizzlys/réel2.mov" type="video/mp4">
+            </video>
+            <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
+        </div>
+    </div>
+    <div>
+
+        <img class="appareilPhoto" src="../img/grizzlys/appareilPhoto.webp">
+
+    </div>
 </div>
 
 
