--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -86,7 +86,7 @@
         <div class="textUnderPhone">
             <div>
                 <img class="tel" src="../img/grizzlys/tel.webp">
-                <video id="video1" class="video" controls loop poster="image.jpg">
+                <video id="video1" class="video" controls loop poster="../img/grizzlys/photoRéel1.png">
                     <source src="../img/grizzlys/réel1.mov" type="video/mp4">
                 </video>
             </div>
@@ -96,16 +96,29 @@
     <div class="iphone">
         <div class="textUnderPhone">
             <img class="tel" src="../img/grizzlys/tel.webp">
-            <video id="video2" class="video" controls loop poster="image.jpg">
+            <video id="video2" class="video" controls loop poster="../img/grizzlys/photoRéel2.png">
                 <source src="../img/grizzlys/réel2.mov" type="video/mp4">
             </video>
             <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
         </div>
     </div>
     <div>
-
         <img class="appareilPhoto" src="../img/grizzlys/appareilPhoto.webp">
 
+    </div>
+
+</div>
+<div class="carousel basic">
+    <div class="group">
+        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
+        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
+        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
+    </div>
+    <!-- Groupe dupliqué -->
+    <div aria-hidden="true" class="group">
+        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
+        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
+        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
     </div>
 </div>
 
