--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -84,7 +84,7 @@
 <div class="projectGalleryGrizzlys">
     <div class="iphone">
         <div class="textUnderPhone">
-            <div>
+            <div style="display: flex">
                 <img class="tel" src="../img/grizzlys/tel.webp">
                 <video id="video1" class="video" controls loop poster="../img/grizzlys/photoRéel1.png">
                     <source src="../img/grizzlys/réel1.mov" type="video/mp4">
@@ -102,24 +102,23 @@
             <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
         </div>
     </div>
-    <div>
+    <div class="appareil-wrapper">
         <img class="appareilPhoto" src="../img/grizzlys/appareilPhoto.webp">
 
+        <div class="carousel basic">
+            <div class="group">
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
+            </div>
+            <div aria-hidden="true" class="group">
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
+            </div>
+        </div>
     </div>
 
-</div>
-<div class="carousel basic">
-    <div class="group">
-        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
-        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
-        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
-    </div>
-    <!-- Groupe dupliqué -->
-    <div aria-hidden="true" class="group">
-        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
-        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
-        <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
-    </div>
 </div>
 
 
