--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -110,17 +110,36 @@
                 <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
                 <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
                 <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/4.png" alt=""></div>
             </div>
             <div aria-hidden="true" class="group">
                 <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/1.png" alt=""></div>
                 <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/2.png" alt=""></div>
                 <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/3.png" alt=""></div>
+                <div class="card"><img class="imgCard" src="../img/grizzlys/photoAppareil/4.png" alt=""></div>
             </div>
         </div>
     </div>
 
 </div>
+<div class="flyers">
+    <img class="imgFlyerGrizzlys1" src="../img/grizzlys/flyers1.webp" alt="Flyer Grizzlys Catalans">
+    <img class="imgFlyerGrizzlys2" src="../img/grizzlys/flyers2.webp" alt="Flyer Grizzlys Catalans">
+    <img class="imgFlyerGrizzlys3" src="../img/grizzlys/flyers3.webp" alt="Flyer Grizzlys Catalans">
+</div>
+<p class ="textFlyerGrizzlys">Flyers pour l’évènement du Vitalsport, dont les Grizzlys Catalans participent pour promouvoir le football américain. Ce sont 3 flyers différents en fonction des trois catégories qu’accueille le club.</p>
 
+<div class="imgGrid">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/1.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/2.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/3.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/4.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/5.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/6.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/7.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/8.webp" alt="Création Grizzlys Catalans">
+    <img class="creaGrid" src="../img/grizzlys/imageGrid/9.webp" alt="Création Grizzlys Catalans">
+</div>
 
 <script src="../data.js"></script>
 <script src="../script.js"></script>
