--- a/project.html
+++ b/project.html
@@ -15,7 +15,7 @@
 <nav class="navbar">
     <a href="index.html"><div class="Logo"><img src="./img/logo.png" alt="Logo Anouk Thomas" class="logoNav"></div></a>
     <div class="navbarElement">
-        <a href="presentation.html">PRÉSENTATION</a>
+        <p><a href="presentation.html">PRÉSENTATION</a></p>
         <p><a href="project.html">PROJETS</a></p>
         <p>CONTACT</p>
     </div>
