--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -85,8 +85,8 @@
     <div class="iphone">
         <div class="textUnderPhone">
             <div style="display: flex">
-                <img class="tel" src="../img/grizzlys/tel.webp">
-                <video id="video1" class="video" controls loop poster="../img/grizzlys/photoRéel1.png">
+                <img class="tel" src="../img/grizzlys/tel.webp" alt="">
+                <video id="video1" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel1.png">
                     <source src="../img/grizzlys/réel1.mov" type="video/mp4">
                 </video>
             </div>
@@ -95,8 +95,8 @@
     </div>
     <div class="iphone">
         <div class="textUnderPhone">
-            <img class="tel" src="../img/grizzlys/tel.webp">
-            <video id="video2" class="video" controls loop poster="../img/grizzlys/photoRéel2.png">
+            <img class="tel" src="../img/grizzlys/tel.webp" alt="">
+            <video id="video2" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel2.png">
                 <source src="../img/grizzlys/réel2.mov" type="video/mp4">
             </video>
             <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
@@ -140,6 +140,8 @@
     <img class="creaGrid" src="../img/grizzlys/imageGrid/8.webp" alt="Création Grizzlys Catalans">
     <img class="creaGrid" src="../img/grizzlys/imageGrid/9.webp" alt="Création Grizzlys Catalans">
 </div>
+
+<img src="../img/grizzlys/logoEcrit.png" alt="" class="logoEcritGrizzlys">
 
 <script src="../data.js"></script>
 <script src="../script.js"></script>
