page grizzlys fini manque a voir les reoutouche1

--- a/projects/grizzlys.html
+++ b/projects/grizzlys.html
@@ -88,7 +88,7 @@
             <div style="display: flex">
                 <img class="tel" src="../img/grizzlys/tel.webp" alt="">
                 <video id="video1" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel1.png">
-                    <source src="../img/grizzlys/réel1.mov" type="video/mp4">
+                    <source src="../img/grizzlys/reelTel/réel1.mov" type="video/mp4">
                 </video>
             </div>
             <p>Réel Instagram sur un entraînement découverte des plus jeunes sur le compte @grizzlys_association.</p>
@@ -98,7 +98,7 @@
         <div class="textUnderPhone">
             <img class="tel" src="../img/grizzlys/tel.webp" alt="">
             <video id="video2" class="video" controls autoplay loop muted poster="../img/grizzlys/photoRéel2.png">
-                <source src="../img/grizzlys/réel2.mov" type="video/mp4">
+                <source src="../img/grizzlys/reelTel/réel2.mov" type="video/mp4">
             </video>
             <p>Story Instagram sur l’entraînement des petits sur le compte @grizzlys_catalans.</p>
         </div>
